--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,1 @@
-<p style="text-align:right"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">Server Docs Home</a> | <a href="https://github.com/dart-lang/server">Edit these docs</a></p>
+<p style="text-align:right"><a href="/index.html">Server Docs Home</a> | <a href="https://github.com/dart-lang/server">Edit these docs</a></p>
