--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,1 @@
-<p style="text-align:right"><a href="/">Server Docs Home</a> | <a href="/server">Edit these docs</a></p>
+<p style="text-align:right"><a href="http://dart-lang.github.io/server/">Server Docs Home</a> | <a href="/server">Edit these docs</a></p>
