--- a/css/main.scss
+++ b/css/main.scss
@@ -136,6 +136,13 @@ aside {
 	background-size: 300px 300px;
 }
 
+.dartlogo {
+	background-image: url('/images/dart-logo.png');
+	background-repeat: no-repeat;
+	background-position: 500px;
+	background-size: 200px 200px;
+}
+
 .trydart-step-details {
   margin-left: 20px;
 }
