--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,1 @@
-<p style="text-align:right"><a href="{{ site.baseurl }}">Home</a> | <a href="{{ site.github.repository_url }}">Edit these docs</a></p>
+<p style="text-align:right"><a href="{{ site.baseurl }}">{{ site.title }}</a> | <a href="{{ site.github.repository_url }}">Edit these docs</a></p>
